# Market-Analysis-Agent

./: .dockerignore  .env  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  design_doc  design_doc.md  docker-compose.yml  fly.toml  pyproject.toml
.claude/: launch.json  settings.json
.claude/agents/: security-reviewer.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 0001_baseline.py  0002_news_symbols.py  0003_research_reports.py
app/: main.py
app/core/: auth.py  cors.py  errors.py  logging.py  observability.py  settings.py
app/db/: session.py
app/schemas/: common.py  edgar.py  market.py  news.py  research.py  symbol.py  ten_k.py
app/services/: business_info.py  cusips.py  data_ingestion.py  earnings.py  edgar.py  form_4.py  fundamentals.py  fundamentals_history.py  holdings_13f.py  llm.py  macro.py  market_prices.py  market_repository.py  news.py  news_categorizer.py  news_ingestion.py  news_repository.py  peers.py  rate_limit.py  research_cache.py  research_confidence.py  research_layout_signals.py  research_orchestrator.py  research_tool_registry.py  risk_categorizer.py  sectors.py  symbol_tagger.py  technicals.py  ten_k.py
db/: init.sql
docs/: GETTING_STARTED.md  MOM_TEST_INTERVIEW.md  PRD_TEMPLATE.md  architecture.md  commands.md  conventions.md  deployment.md  security.md  testing.md  workflow.md
docs/adr/: 0000-template.md  0001-stack-choice.md  0002-deployment.md  0003-pivot-equity-research.md  0004-visual-first-product-shape.md  0005-symbol-centric-dashboard.md  (+1 more)
frontend/: .env.example  .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
scripts/: smoke.py
tasks/: dogfood-2026-05-03.md  lessons.md  todo.md
tests/: conftest.py  test_auth.py  test_business_info.py  test_cors.py  test_cusips.py  test_data_ingestion.py  test_earnings.py  test_edgar.py  test_form_4.py  test_fundamentals.py  test_fundamentals_history.py  test_health.py  test_holdings_13f.py  test_llm.py  test_macro.py  test_market.py  test_market_prices.py  test_market_repository.py  test_news.py  test_news_categorizer.py  test_news_ingestion.py  test_news_tool.py  test_observability.py  test_peers.py  test_rate_limit.py  test_research_cache.py  test_research_confidence.py  test_research_layout_signals.py  test_research_list_router.py  test_research_orchestrator.py  test_research_router.py  test_research_schemas.py  test_research_tool_registry.py  test_risk_categorizer.py  test_sectors.py  test_symbol_tagger.py  test_symbols.py  test_technicals.py  test_ten_k.py
(+140 files in other folders)
