[project]
name = "market-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.9.2",
  "pydantic-settings==2.6.1",
  "httpx==0.27.2",
  "python-dotenv==1.0.1",
  # DB stack (we’ll wire in Step 3)
  "SQLAlchemy==2.0.35",
  "asyncpg==0.29.0",
  "alembic==1.13.2",
]

[tool.uv]
dev-dependencies = [
  "pytest",
  "pytest-asyncio",
  "ruff",
  "mypy",
]
