[project]
name = "market-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.9.2",
  "pydantic-settings==2.6.1",
  "httpx==0.27.2",
  "python-dotenv==1.0.1",
  # DB stack
  "SQLAlchemy==2.0.35",
  "asyncpg==0.29.0",
  "alembic==1.13.2",
  # Market data providers
  "yfinance==1.3.0",
  # LLM provider
  "anthropic==0.97.0",
  # News providers
  "feedparser==6.0.12",
  # 10-K HTML parser (Item 1 / Item 1A extraction). Picked over lxml
  # because real 10-K HTML is messy and BeautifulSoup tolerates it.
  "beautifulsoup4==4.14.3",
]

[tool.uv]
dev-dependencies = [
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
  "ruff==0.6.9",
  "mypy==1.11.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
  "E501",  # line length handled above
  "E741",  # ambiguous single-letter names — OHLCV uses `l` for "low" by convention
]

[tool.ruff.lint.flake8-bugbear]
# FastAPI relies on `Depends`/`Query`/etc. as default arguments — that's the
# documented DI idiom, not a B008 bug. Exempt the usual suspects.
extend-immutable-calls = [
  "fastapi.Depends",
  "fastapi.Query",
  "fastapi.Path",
  "fastapi.Body",
  "fastapi.Header",
  "fastapi.Cookie",
  "fastapi.File",
  "fastapi.Form",
]
